dim/spec/test_input/invalid_input/invalid_types.dim
Config:
  - originator: CompanyName
    files: modules/test_module_1.dim
    category: module
  - originator: Customer
    files:
      - modules/test_module_1.dim
      - modules/test_module_2.dim
    category: test
